# ekm

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  backend.spec  docker-compose.yml  ekm.db  ekm_cli.py  pyproject.toml  pytest.ini  requirements.txt
benchmarks/: __init__.py  performance.py
config/: __init__.py  providers.py  settings.py
data/: __init__.py
docs/: TUTORIAL.md  attention.md  consolidation.md  contributing.md  retrieval.md  training.md
docs/architecture/: README.md  overview.md
docs/guides/: configuration.md  getting_started.md  troubleshooting.md
ekm/: __init__.py
ekm/core/: __init__.py  adaptive_k.py  advanced_embeddings.py  agent.py  attention_viz.py  consolidation.py  explainability.py  factory.py  mesh.py  models.py  patterns.py  prompts.py  query_analysis.py  rl_feedback.py  scalability.py  state.py  task_manager.py  text_processor.py  training.py  utils.py  validation.py
ekm/core/attention/: __init__.py  mechanisms.py
ekm/core/graph/: __init__.py  operations.py
ekm/core/knowledge/: __init__.py  extraction.py  organization.py
ekm/core/retrieval/: __init__.py  service.py
ekm/providers/: __init__.py  base.py  deepseek.py  gemini.py  mock.py  openai.py
ekm/storage/: __init__.py  base.py  factory.py  memory.py  sql.py
ekm/utils/: document_loader.py
examples/research_assistant/: server.py
examples/research_assistant/backend/app/: main.py  models.py
examples/research_assistant/frontend/: .gitignore  index.html  package.json  tailwind.config.cjs  vite.config.js
examples/research_assistant/frontend/electron/: main.js
migrations/: __init__.py
notebooks/: __init__.py  exploration.ipynb
results/: __init__.py
scripts/: __init__.py  deploy.py  run_tests.py  setup_dev_env.py
tests/: __init__.py  conftest.py  test_task_manager.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_full_flow.py  test_mock_full_flow.py
tests/unit/: __init__.py  conftest.py  test_attention.py  test_clustering.py  test_consolidation.py  test_document_loader.py  test_focus_buffer.py  test_gemini_provider.py  test_knowledge_extractor.py  test_patterns.py  test_persona.py  test_query_analysis.py  test_scalability.py  test_storage.py
(+10 files in other folders)
